# PolarDataAnalysis

./: .cz.toml  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  Dockerfile  PROBLEMS.md  README.md  compile_commands.json  config.yaml  developer_key  main.cpp  meson.build  pyproject.toml
.cache/clangd/index/: decoder.cpp.23F574925B7AEF1F.idx  decoder.hpp.3F038C04C69C2C2A.idx  fit.cpp.2F783F5D01B33A6A.idx  fit.cpp.6EC15FF556F93078.idx  fit.hpp.2D430A33CC6ABB40.idx  fit.hpp.ABCA30BA055FA0F7.idx  fit_config.hpp.5C03D32DCE3860AF.idx  fit_config.hpp.C202FA37E92A101E.idx  main.cpp.C272A6427455E5B5.idx  main.cpp.FCC4FFA4D2099AE6.idx
accesslink_cpp/: CMakeLists.txt  accesslink.cpp  main.cpp  oauth2.cpp  oauth2.hpp  utils.hpp
accesslink_cpp/endpoints/: pull_notifications.hpp  resource.hpp  training_data.hpp  transaction.hpp  users.hpp
containers/: docker-compose.yml
containers/database/: Dockerfile
containers/polar_app/: Dockerfile
fit_lib/: fit.cpp  fit.hpp  fit_accelerometer_data_mesg.hpp  fit_accelerometer_data_mesg_listener.hpp  fit_accumulated_field.cpp  fit_accumulated_field.hpp  fit_accumulator.cpp  fit_accumulator.hpp  fit_activity_mesg.hpp  fit_activity_mesg_listener.hpp  fit_ant_channel_id_mesg.hpp  fit_ant_channel_id_mesg_listener.hpp  fit_ant_rx_mesg.hpp  fit_ant_rx_mesg_listener.hpp  fit_ant_tx_mesg.hpp  fit_ant_tx_mesg_listener.hpp  fit_aviation_attitude_mesg.hpp  fit_aviation_attitude_mesg_listener.hpp  fit_barometer_data_mesg.hpp  fit_barometer_data_mesg_listener.hpp  fit_beat_intervals_mesg.hpp  fit_beat_intervals_mesg_listener.hpp  fit_bike_profile_mesg.hpp  fit_bike_profile_mesg_listener.hpp  fit_blood_pressure_mesg.hpp  fit_blood_pressure_mesg_listener.hpp  fit_buffer_encode.cpp  fit_buffer_encode.hpp  fit_buffered_mesg_broadcaster.cpp  fit_buffered_mesg_broadcaster.hpp  fit_buffered_record_mesg.hpp  fit_buffered_record_mesg_broadcaster.cpp  fit_buffered_record_mesg_broadcaster.hpp  fit_buffered_record_mesg_listener.hpp  fit_cadence_zone_mesg.hpp  fit_cadence_zone_mesg_listener.hpp  fit_camera_event_mesg.hpp  fit_camera_event_mesg_listener.hpp  fit_capabilities_mesg.hpp  fit_capabilities_mesg_listener.hpp  (+230 more)
scripts/: setup_env.sh
src/: CMakeLists.txt  accesslink.cpp  accesslink.h  accesslink.hpp  debug.h  decoder.cpp  decoder.hpp  gui.cpp  gui.h  main.cpp  oauth2.cpp  oauth2.h  oauth2.hpp  request.h  sources.cmake  utilities.h  utilities.hpp
src/app/: README.md  driver.cpp  driver.h
src/authorization/: authorization.cpp  authorization.h  authorization.hpp
src/calendar_scheduler/: CMakeLists.txt  calendar_exception.h  credentials.json  post.py  quickstart.py  scheduler.cpp  scheduler.h  test.cpp
src/calendar_scheduler/include/: calendar_exception.h  scheduler.h
src/data_analyser/: CMakeLists.txt  Linear_regression.ipynb  csv_helper.py  model.cpp  model.h  model.py  model_utilities.h  polar_user_data.csv  polar_user_data.numbers
src/data_analyser/datasets/FitabaseData/: dailyActivity_merged.csv  final_data.csv
src/database/: CMakeLists.txt  README.md  db.cpp  db.h  db_utilities.h  db_worker.cpp  sources.cmake  table_activity.cpp  table_activity.h  table_base.cpp  table_base.h  table_exercises.cpp  table_exercises.h  table_health.cpp  table_health.h  table_phys_info.cpp  table_phys_info.h  table_sleep.cpp  table_sleep.h  test.cpp
src/database/include/: db_utilities.h  db_worker.h  table_activity.h  table_base.h  table_phys_info.h  table_sleep.h
src/database/lib/: db_worker.cpp  table_activity.cpp  table_base.cpp  table_exercises.cpp  table_phys_info.cpp  table_sleep.cpp
src/database/tests/: CMakeLists.txt  sources.cmake  test.cpp  utilities.h
src/endpoints/: daily_activity.cpp  daily_activity.h  daily_activity.hpp  daily_activity_transaction.cpp  daily_activity_transaction.h  daily_activity_transaction.hpp  physical_info.cpp  physical_info.h  physical_info.hpp  physical_info_transaction.cpp  physical_info_transaction.h  pull_notifications.cpp  pull_notifications.h  pull_notifications.hpp  resource.h  resource.hpp  training_data.cpp  training_data.h  training_data.hpp  training_data_transaction.cpp  training_data_transaction.h  training_data_transaction.hpp  transaction.h  transaction.hpp  users.cpp  users.h  users.hpp
src/json_helpers/: activities.cpp  activities.h  activity.cpp  activity.h  execises.cpp  exercises.cpp  exercises.h  sleep.cpp  sleep.h
src/model/: CMakeLists.txt  model.cpp  model.py  model_utilities.h
src/model/datasets/B.HEALTH/: B.HEALTH classification.csv
src/model/datasets/FitabaseData/: dailyCalories_merged.csv  dailyIntensities_merged.csv
src/model/include/: model.h  model_exception.h
src/model/tests/: polar_user_data.csv  polar_user_data2.csv
src/polar_api/: CMakeLists.txt  README.md  accesslink.cpp  accesslink.h  oauth2.cpp  oauth2.h  request.cpp  request_wrap.cpp  request_wrap.h
src/polar_api/endpoints/: daily_activity.cpp  daily_activity.h  daily_activity_transaction.cpp  daily_activity_transaction.h  physical_info.cpp  physical_info.h  physical_info_transaction.cpp  physical_info_transaction.h  pull_notifications.cpp  pull_notifications.h  resource.h  training_data.cpp  training_data.h  training_data_transaction.cpp  training_data_transaction.h  transaction.cpp  transaction.h  users.cpp  users.h
src/polar_api/endpoints/include/: daily_activity_transaction.h  physical_info.h  resource.h  training_data.h  users.h
src/polar_api/endpoints/src/: daily_activity.cpp  daily_activity_transaction.cpp  physical_info.cpp  physical_info_transaction.cpp  pull_notifications.cpp  training_data.cpp  training_data_transaction.cpp  transaction.cpp  users.cpp
src/polar_api/include/: accesslink.h  request_wrap.h
src/polar_api/lib/: accesslink.cpp  oauth2.cpp  request_wrap.cpp
src/polar_api/tests/: CMakeLists.txt  sources.cmake  test.cpp
src/templates/: hello.html
src/web/: driver.cpp  driver.h
src/wt_module/: authorization.cpp  authorization.hpp  web_app.hpp
