[tool.poetry]
name = "proj"
version = "0.4.0"
description = ""
authors = ["andrey <aa.voyko@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
commitizen = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
